Dark mode styling fix for geosearch and zoom control (#79)
* fix(GeoSearchField): dark mode styling
* fix(LeafletMap): dark mode for zoom control
* fix(leafletZoomControl): styling for disabled
* fix(leafletZoomControl): remove hover selector

--- a/src/components/css/LeafletMap.css
+++ b/src/components/css/LeafletMap.css
@@ -57,6 +57,39 @@
   margin-left: 1em;
 }
 
+/* override styling of leafletjs elements */
+
+.leaflet-control-zoom {
+  --accent: var(--ion-color-light-tint);
+
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4) !important;
+  border-color: var(--ion-color-light, var(--ion-background-color, #fff)) !important;
+}
+
+.leaflet-control-zoom > a {
+  background-color: var(--ion-color-light, var(--ion-background-color, #fff)) !important;
+  color: var(--ion-color-dark) !important;
+  border: none;
+}
+
+.leaflet-control-zoom > a:first-child {
+  border-bottom: 1px solid var(--accent) !important;
+}
+
+.leaflet-control-zoom > a.leaflet-disabled {
+  background-color: var(--accent) !important;
+  color: var(--ion-color-medium) !important;
+}
+
+/* gotta do this cuz the colors look ugly otherwise */
+@media (prefers-color-scheme: light) {
+  .leaflet-control-zoom {
+    --accent: var(--ion-color-light-shade);
+  }
+}
+
+/* Modal */
+
 .modal__body {
   padding: 20px;
   text-align: center;
